# CKPool

./: .gitignore  CMakeLists.txt  README.md  ckpool.conf  uninstall.cmake.in
src/: CMakeLists.txt  ckpool.c  config.h  connector.c  generator.c  sha2.c  sha2.h  stratifier.c
